# libswim

./: .clang-format  .clang-tidy  CMakeLists.txt  NOTES.md  README.md
.github/workflows/: ci.yml  lint.yml  release.yml
examples/: CMakeLists.txt  swim_client.c  swim_common.c  swim_server.c  swim_server_tui.c
swim/: CMakeLists.txt  cluster.c  cluster.h  config.h.in  debug.c  debug.h  defs.h  encoding.c  encoding.h  encoding_test.c  event.c  event.h  logging.c  logging.h  network.c  network.h  node.c  node.h  probe_test.c  process.c  process.h  server.c  server.h  server_pthread.c  state.c  state.h  state_test.c  swim.h  test.h  utils.c  utils.h
